# qcar2_object_detections

./: .gitignore  CMakeLists.txt  README.md  color_rv.py  package.xml  setup.cfg  setup.py
config/: detections_params.yaml
launch/: qcar2_detections.launch.py
msg/: PersonDetection.msg  StopSignDetection.msg  TrafficLightDetection.msg  ZebraCrossingDetection.msg
qcar2_object_detections/: __init__.py  detection_filter_node copy.py  detection_filter_node.py  detection_visualizer_node.py  image_preprocessor_node.py
scripts/: proob1.py
